def mainClassName = "pro.gravit.launchermodules.mirrorhelper.MirrorHelperModule"

sourceCompatibility = '17'
targetCompatibility = '17'

jar {
    manifest.attributes("Module-Main-Class": mainClassName)
}

dependencies {
}